[package]
name = "px"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
s2n-quic = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
once_cell = "^1.17.0"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = { version = "0.11" }