[package]
name = "px"
version = "0.1.0"
edition = "2021"
authors = ["Assaf Vayner <assafvayner@gmail.com>"]

[features]
# current state, paxos has not yet been implemented, only ping pong
default = ["paxos"]
pingpong = []
paxos = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
s2n-quic = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
once_cell = "^1.17.0"
futures = "0.3"
async-recursion = "1.0.2"
serde_bytes = "0.11.8"
